--- a/package.json
+++ b/package.json
@@ -18,9 +18,8 @@
   "dependencies": {
     "@emotion/is-prop-valid": "latest",
     "@hookform/resolvers": "^3.10.0",
-    "@prisma/client": "^5.20.0",
     "@neondatabase/serverless": "latest",
-    "bcryptjs": "^2.4.3",
+    "@prisma/client": "^5.20.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -50,6 +49,7 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@vercel/analytics": "latest",
     "autoprefixer": "^10.4.20",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -57,6 +57,7 @@
     "embla-carousel-react": "8.5.1",
     "framer-motion": "latest",
     "input-otp": "1.4.1",
+    "lenis": "^1.3.15",
     "lucide-react": "^0.454.0",
     "next": "16.0.3",
     "next-themes": "latest",
@@ -74,10 +75,10 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/bcryptjs": "^2.4.6",
     "postcss": "^8.5",
     "prisma": "^5.20.0",
     "tailwindcss": "^4.1.9",
